--- a/style/main.css
+++ b/style/main.css
@@ -1,8 +1,22 @@
-*{ box-sizing: border-box;}
-.header__top{
-    background-color: rgb(10, 10, 10);
+.container__circulito{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    border-radius: 50%;
+    border: solid rebeccapurple;
+    margin: auto;
+    margin-top: 0px;
+    position: relative;
 }
 
-.header__down{
-    background-color: #3C948B; 
+.container__line{
+    height: 4px;
+    width: 140px;
+    position: absolute;
+    left: 50%; 
+    top: 50%;
+    background-color: rebeccapurple;
+    transform-origin: left center;
+    transition: transform 0.3s ease-in-out 0s;
+    transform: rotate(203deg);
 }
