--- a/style/main.css
+++ b/style/main.css
@@ -1,9 +1,13 @@
-
-
+ @font-face {
+     font-family: "Pacifico";
+     font-style: normal;
+     font-weight: normal;
+     src: local("?"), url("../fonts/Pacifico-Regular.ttf");
+ }
 .container__circulito{
     width: 300px;
     height: 300px;
-    border-radius: 50%;
+    border-radius: 50%¿;
     border-radius: 50%;
     border: solid rebeccapurple;
     margin: auto;
@@ -13,11 +17,11 @@
 
 .container__line{
     height: 4px;
-    width: 140px;
+    width: 150px;
     position: absolute;
     left: 50%; 
     top: 50%;
-    background-color: rebeccapurple;
+    background-color: coral;
     transform-origin: left center;
     transition: transform 0.2s ease-in-out 0s;
     transform: rotate(203deg);
@@ -27,4 +31,5 @@
     position:absolute;
     left: 50%; 
     top: 50%;
+    font-family: Pacifico ;
 }
